--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webhook for Facebook Messenger",
   "main": "app.js",
   "scripts": {
-    "start": "node --env-file .env app.js",
+    "start": "node app.js",
     "dev": "nodemon --env-file .env app.js",
     "setup": "cd service && node response.js",
     "test": "echo \"Error: no test specified\" && exit 1"
